--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,7 +19,7 @@ header {
 }
 
 /* ================= Header Socials ================ */
-.headersocials { 
+.header_socials { 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,10 +27,11 @@ header {
     position: absolute;
     left: 0; 
     bottom: 3rem;
+    font-size: 150%;
 }
-.headersocials::after {
+.header_socials::after {
     content: '';
-    width: 1px;
+    width: 2px;
     height: 2rem;
     background: var(--color-primary);
 }
@@ -54,7 +55,7 @@ header {
     bottom: 5rem;
     transform: rotate(90deg);
     font-weight: 300;
-    font-size: 0.9rem;
+    font-size: 110%;
 }
 /*  =========Media Information Medium Devices======== */
 @media screen and (max-width: 1024px){
